# Bigium-Social-Publishing-Platform

./: .gitignore  Dockerfile  README.md  dev.config.env  docker-compose.yaml  manage.py  prod.config.env  pyproject.toml  setting.py
auth/: apps.py  urls.py
bigium_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
bigium_app/migrations/: 0001_initial.py  0002_rename_name_articlecategory_category_and_more.py  0003_rename_category_article_category_id_and_more.py  0004_rename_category_id_article_category.py
bigium_auth_app/: apps.py  forms.py  models.py  urls.py  views.py
bigium_auth_app/migrations/: 0001_initial.py
bigium_social_publishing_platform/: asgi.py  settings.py  urls.py  wsgi.py
blog/: settings.py  urls.py
blog_app/: apps.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py  0002_tag_articlewithtagmapping_article_tags.py
static/css/: article_base.css  base.css  index.css  markdown.css
static/js/: public_article.js  register.js
templates/: article_content.html  article_detail.html  base.html  edit_article.html  home_page.html  index.html  login.html  register.html  write_article.html
