[project]
name = "bigium-social-publishing-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Shane-Yang",email = "81016471+qew4476@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.4,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "markdown (>=3.7,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
