[project]
name = "jed-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Jed-Tom",email = "bombom7108@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.4,<6.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "markdown (>=3.7,<4.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.10"
